<resources>
    <string name="app_name">Game Backlog Kotlin</string>
    <string name="action_delete">Delete all games</string>
    <string name="title_activity_add">Add Game</string>
    <string name="title">Title</string>
    <string name="platform">Platform</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="release">Release: %1s</string>
    <string name="success_backlog">Successfully deleted backlog</string>
    <string name="undo">undo</string>
    <string name="success_game">Successfully deleted game</string>
    <string name="error_game_null">Game must not be null</string>
    <string name="error_tile_empty">Title must not be empty</string>
    <string name="error_platform_empty">Platform must not be empty</string>
    <string name="error_date_invalid">Please fill in a valid date</string>
</resources>
